`JavaExpressionParseUtil#parse` no longer takes a context object.  Most calls to
`JavaExpressionParseUtil#parse` should be replaced with a call to one of the
methods in `StringToJavaExpressions`.

Renamed `AnnotatedTypeComparer` to `DoubleAnnotatedTypeScanner`. In the new
class, the method `compare` was renamed `defaultAction`. The method `combineRs`
was replaced by `reduce`.

Removed deprecated `PluginUtil` class.

Removed methods:
 * `AnnotationUtils.getElementValueArrayOrSingleton`
 * `DependentTypesHelper.standardizeNewClassTree`: use `atExpression` instead
 * `DependentTypesHelper.standardizeString`: override one of the methods
   explained in the Javadoc of `convertAnnotationMirror`

Method renamings:
 * `DefaultQualifierForUseTypeAnnotator.getSupportAnnosFromDefaultQualifierForUses` => `getDefaultQualifierForUses`
 * In `DependentTypesHelper`:
    * `check*` => `check*ForErrorExpressions`
    * `viewpointAdaptConstructor` => `atConstructorInvocation`
    * `viewpointAdaptMethod` => `atMethodInvocation`
    * `viewpointAdaptTypeVariableBounds` => `atParameterizedTypeUse`
    * `standardizeClass` =>  `atTypeDecl`
    * `standardizeExpression` => `atExpression`
    * `standardizeFieldAccess` => `atFieldAccess`
    * `standardizeReturnType` => `atReturnType`
    * `standardizeVariable` => `atVariableDeclaration`

**Closed issues:**

---------------------------------------------------------------------------

Version 3.11.0, March 1, 2021

**User-visible changes:**

In a stub file for a class C, you may write a declaration for a method that is
inherited by C but not defined by it.  Previously, such stub declarations were
ignored.  For more information, see the manual's documentation of "fake
overrides".

Nullness Checker error message key changes:
 * `known.nonnull` => `nulltest.redundant`
 * `initialization.static.fields.uninitialized` => `initialization.static.field.uninitialized`,
   and it is now issued on the field rather than on the class