@@ -12,7 +12,6 @@ import java.util.Collections;
 import java.util.Set;
 import java.util.regex.Pattern;
 import javax.lang.model.element.AnnotationMirror;
-import javax.lang.model.element.AnnotationValue;
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.type.TypeKind;
 import javax.lang.model.util.Elements;
@@ -102,9 +101,8 @@ public class RegexAnnotatedTypeFactory extends BaseAnnotatedTypeFactory {
    *
    * @see org.checkerframework.checker.regex.qual.PartialRegex
    */
-  private final ExecutableElement partialRegexValue =
-      TreeUtils.getMethod(
-          "org.checkerframework.checker.regex.qual.PartialRegex", "value", 0, processingEnv);
+  private final ExecutableElement partialRegexValueElement =
+      TreeUtils.getMethod(PartialRegex.class, "value", 0, processingEnv);
 
   /**
    * The Pattern.compile method.
@@ -251,25 +249,29 @@ public class RegexAnnotatedTypeFactory extends BaseAnnotatedTypeFactory {
       throw new BugInCF("Unexpected qualifiers: %s %s", a1, a2);
     }
 
-    /** Gets the value out of a regex annotation. */
+    /**
+     * Gets the value out of a regex annotation.
+     *
+     * @param anno a @Regex annotation
+     * @return the {@code value} element of the annotation
+     */
     private int getRegexValue(AnnotationMirror anno) {
-      return (Integer)
-          AnnotationUtils.getElementValuesWithDefaults(anno).get(regexValueElement).getValue();
+      return AnnotationUtils.getElementValue(anno, regexValueElement, Integer.class, 0);
     }
   }
 
   /**
    * Returns the group count value of the given annotation or 0 if there's a problem getting the
    * group count value.
+   *
+   * @param anno a @Regex annotation
+   * @return the {@code value} element of the annotation
    */
   public int getGroupCount(AnnotationMirror anno) {
-    AnnotationValue groupCountValue =
-        AnnotationUtils.getElementValuesWithDefaults(anno).get(regexValueElement);
-    // If group count value is null then there's no Regex annotation
-    // on the parameter so set the group count to 0. This would happen
-    // if a non-regex string is passed to Pattern.compile but warnings
-    // are suppressed.
-    return (groupCountValue == null) ? 0 : (Integer) groupCountValue.getValue();
+    if (anno == null) {
+      return 0;
+    }
+    return AnnotationUtils.getElementValue(anno, regexValueElement, Integer.class, 0);
   }
 
   /** Returns the number of groups in the given regex String. */
@@ -440,12 +442,14 @@ public class RegexAnnotatedTypeFactory extends BaseAnnotatedTypeFactory {
       return builder.build();
     }
 
-    /** Returns the value of a PartialRegex annotation. */
+    /** Returns the value of a PartialRegex annotation, if there is one in {@code type}. */
     private String getPartialRegexValue(AnnotatedTypeMirror type) {
-      return (String)
-          AnnotationUtils.getElementValuesWithDefaults(type.getAnnotation(PartialRegex.class))
-              .get(partialRegexValue)
-              .getValue();
+      AnnotationMirror partialRegexAnno = type.getAnnotation(PartialRegex.class);
+      if (partialRegexAnno == null) {
+        return "";
+      }
+      return AnnotationUtils.getElementValue(
+          partialRegexAnno, partialRegexValueElement, String.class, "");
     }
 
     /**
